add mini wave talent